<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Spinner
            android:id="@+id/RoomMeeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/Name_Lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:text="@string/selectionnez_une_date"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/Hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heure"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/select_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="20dp"
                    android:text="@string/selectionnez_une_heure"
                    android:layout_marginLeft="20dp" />
"
            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Input"
                android:hint="@string/entrer_le_mail_des_particpants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/Participant"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:theme="@style/Theme.MaterialComponents"
                style="@style/Widget.MaterialComponents.Chip.Entry">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                app:closeIconEnabled="true"
                app:closeIcon="@drawable/ic_close_black_24dp"
                android:checkable="true"/>

            </com.google.android.material.chip.ChipGroup>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/Btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ajouter" />




        <TextView
            android:id="@+id/Subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/SubjectLyt"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="sujet"
            android:inputType="text"/>

        <Button
            android:id="@+id/Create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="CREER"
            android:layout_gravity="center"/>

    </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>